# 2d-snake-game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: big_food.hpp  food.hpp  game.hpp  gui.hpp  header.hpp  render_engine.hpp  shader.hpp  snake.hpp
include/glad/: glad.h
include/imgui/: imgui_impl_sfml.cpp  imgui_impl_sfml.h
src/: big_food.cpp  food.cpp  game.cpp  glad.c  gui.cpp  main.cpp  render_engine.cpp  shader.cpp  snake.cpp
src/shaders/: fragment.glsl  vertex.glsl
